# Copyright (c) 2026 @wimwian
# SPDX-License-Identifier: MIT
# https://github.com/wimwian-org/t2t
[project]
name = "t2t"
version = "0.1.0"
description = "TOML to Tailwind CSS theme converter"
requires-python = ">=3.15"
dependencies = [
    "csscompressor>=0.9.5",
]

[project.scripts]
t2t = "t2t.main:main"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["t2t*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pytest>=8",
    "pytest-cov>=7.1.0",
    "towncrier>=24.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov=t2t --cov-fail-under=100"

[tool.towncrier]
package = "t2t"
filename = "CHANGELOG.md"
directory = "changelog.d"
title_format = "## {version} ({project_date})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Deprecations and Removals"
showcontent = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
